# aquamarine-server

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
aquamarine/: adapter.py  api.py  client.py  const.py  models.py  util.py
aquamarine/adapters/: local.py  obsidian.py
aquamarine/web/: api.py  helpers.py  logging.py
